--- a/views/pages/send.ejs
+++ b/views/pages/send.ejs
@@ -35,7 +35,7 @@
                           <span>
                             <span class="tb">Total Balance</span>&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
                               <span><%= tokenBal %></span> &nbsp;&nbsp;
-                          <span class="text-danger">GEM</span> &nbsp;&nbsp;&nbsp;&nbsp;= &nbsp;&nbsp;&nbsp;
+                          <span class="text-danger">GVC</span> &nbsp;&nbsp;&nbsp;&nbsp;= &nbsp;&nbsp;&nbsp;
                           <%= usdBal %>
                             </span>&nbsp;&nbsp;
                             <span class="text-danger">USD</span>
@@ -73,7 +73,7 @@
                           <div class="text-center" style="margin-top:20px;margin-bottom: 40px;">
                             <div class="radio radio-info radio-inline">
                               <input type="radio" id="inlineRadio1" value="GEM" name="radioInline" checked="">
-                              <label for="inlineRadio1" >GEM</label>
+                              <label for="inlineRadio1" >GVC</label>
                             </div>
                             <div class="radio radio-success radio-inline">
                               <input type="radio" id="inlineRadio2" value="ETH" name="radioInline">
