--- a/views/pages/transactions.ejs
+++ b/views/pages/transactions.ejs
@@ -35,7 +35,7 @@
 											<span>
 											  <span class="tb">Total Balance</span>&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
 												<span><%= tokenBal %></span> &nbsp;&nbsp;
-											<span class="text-danger ">GEM</span> &nbsp;&nbsp;&nbsp;&nbsp;= &nbsp;&nbsp;&nbsp;
+											<span class="text-danger ">GVC</span> &nbsp;&nbsp;&nbsp;&nbsp;= &nbsp;&nbsp;&nbsp;
 											<%= usdBal %>
 												</span>&nbsp;&nbsp;
 												<span class="text-danger ">USD</span>
