--- a/views/emailTemplates/forgotPass.ejs
+++ b/views/emailTemplates/forgotPass.ejs
@@ -52,7 +52,7 @@
                     <div style="text-align:justify">
                     <div style="text-align:center">
                       <div style="text-align:left">
-                      <p style="text-align:center;margin:0em 0;color:#606060;font:bold 27px Arial,Helvetica,sans-serif">GemBank Wallet
+                      <p style="text-align:center;margin:0em 0;color:#606060;font:bold 27px Arial,Helvetica,sans-serif">GemVault Wallet
                       </p>
                       </div>
                     </div>
@@ -193,7 +193,7 @@
                       <tr>
                       <td valign="top " style="color:#606060;font-family:Helvetica;font-size:11px;line-height:125%;text-align:center;padding:0 18px 9px 18px ">
                         <div style="text-align:center ">
-                        <em>Copyright © 2018&nbsp;GemBank.com, All rights reserved.</em>
+                        <em>Copyright © 2018&nbsp;GemVault.io, All rights reserved.</em>
                         <br>
                         <!-- <a href="# " target="_blank ">Unsubscribe here</a> -->
                         </div>
