--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -234,7 +234,7 @@
 
                 <!--<li class="m-b-sm"><b class="selna">Seller Name:</b>&nbsp;&nbsp;<span class="text-danger">GemBank</span></li>-->
 
-                <li><b class="sele">Seller Email:</b>&nbsp;&nbsp;<span class="text-danger">support@GemBank.com</span></li>
+                <li><b class="sele">Seller Email:</b>&nbsp;&nbsp;<span class="text-danger">support@GemVault.io</span></li>
               </ul>
           </div>
           <div class="row text-center">
