--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -32,7 +32,7 @@
                 zh_CN:"常见问题(FAQ)"
             },
              "class:q-1" : {
-                 zh_CN : "GemBank Exchange (GEM)的令牌吗?"
+                 zh_CN : "GemVault Exchange (GVC)的令牌吗?"
              },
              "class:ans-1":{
                  zh_CN : "的目的是所罗门群岛的交流令牌或 GEM 是作为货币的所罗门群岛的交流项目。 它们的保存价值和安全的支付工具的交易。 使用所罗门交流将使您能够参加交易的加密的货币和贸易的任何当地的货币。 该令牌 GEM 还将可以交易的第三方 cryptocurrency 交流以及 Somolon 交换。"
