--- a/views/emailTemplates/emailRegister.ejs
+++ b/views/emailTemplates/emailRegister.ejs
@@ -52,7 +52,7 @@
 										<div style="text-align:justify">
 										<div style="text-align:center">
 											<div style="text-align:left">
-											<p style="text-align:center;margin:0em 0;color:#606060;font:bold 27px Arial,Helvetica,sans-serif">GemBank Wallet
+											<p style="text-align:center;margin:0em 0;color:#606060;font:bold 27px Arial,Helvetica,sans-serif">GemVault Wallet
 											</p>
 											</div>
 										</div>
@@ -77,7 +77,7 @@
 										<div style="text-align:justify">
 										<div style="text-align:center">
 											<div style="text-align:left">
-										<p style="text-align:left; margin:0em 0;color:#606060;font:14px/19px Arial,Helvetica,sans-serif;color:#333332">Thank you so much for showing your interest in joining GemBank wallet. To complete the Signup process please click on the activation link below.
+										<p style="text-align:left; margin:0em 0;color:#606060;font:14px/19px Arial,Helvetica,sans-serif;color:#333332">Thank you so much for showing your interest in joining GemVault wallet. To complete the Signup process please click on the activation link below.
 											</div>
 										</div>
 										</div>
@@ -145,7 +145,7 @@
 											<div style="text-align:left">
 											<p style="text-align:left; margin:0em 0;color:#606060;font:14px/19px Arial,Helvetica,sans-serif;color:#333332; font-weight:700"><strong style="font-weight: 700">Sincerely,</strong>
 											</p>
-											<p style="text-align:left; margin:0em 0;color:#606060;font:14px/19px Arial,Helvetica,sans-serif;color:#333332;">GemBank Wallet Team
+											<p style="text-align:left; margin:0em 0;color:#606060;font:14px/19px Arial,Helvetica,sans-serif;color:#333332;">GemVault Wallet Team
 											</p>
 											</div>
 										</div>
@@ -193,7 +193,7 @@
 											<tr>
 											<td valign="top " style="color:#606060;font-family:Helvetica;font-size:11px;line-height:125%;text-align:center;padding:0 18px 9px 18px ">
 												<div style="text-align:center ">
-												<em>Copyright © 2018&nbsp;GemBank.com, All rights reserved.</em>
+												<em>Copyright © 2018&nbsp;GemVault.com, All rights reserved.</em>
 												<br>
 												<!-- <a href="# " target="_blank ">Unsubscribe here</a> -->
 												</div>
