configured for mainnet

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -23,7 +23,7 @@
                 <a href="/transactions"><i class="fa fa-paper-plane"></i> <span class="nav-label r3">Transaction History</span></a>
             </li>
             <li>
-                <a href="/send"><i class="fa fa-spotify"></i> <span class="nav-label r4">Send GEM/Ether</span></a>
+                <a href="/send"><i class="fa fa-spotify"></i> <span class="nav-label r4">Send GVC/Ether</span></a>
             </li>
         </ul>
     </div>
