FavIcon/Chinese for buy message/ICO date

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -78,8 +78,8 @@
                                 <label class="pumo">Purchase Mode</label>
                                 <div>
                                   <select class="form-control selectWidth" id="buy-currency" required>
-                                        <option >ETH</option>
-                                        <option >BTC</option>
+                                        <option>ETH</option>
+                                        <!--<option>BTC</option>-->
                                       </select>
                                 </div>
                               </div>
