--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,4 +9,4 @@
 <link href="/css/style.css" rel="stylesheet">
 <link href="/css/wallet.css" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="/jquery.localizationTool.min.css">
-
+<link rel="icon" href="/img/logo.png">
