--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -35,19 +35,19 @@
                  zh_CN : "GemVault Exchange (GVC)的令牌吗?"
              },
              "class:ans-1":{
-                 zh_CN : "的目的是所罗门群岛的交流令牌或 GEM 是作为货币的所罗门群岛的交流项目。 它们的保存价值和安全的支付工具的交易。 使用所罗门交流将使您能够参加交易的加密的货币和贸易的任何当地的货币。 该令牌 GEM 还将可以交易的第三方 cryptocurrency 交流以及 Somolon 交换。"
+                 zh_CN : "的目的是所罗门群岛的交流令牌或 GVC 是作为货币的所罗门群岛的交流项目。 它们的保存价值和安全的支付工具的交易。 使用所罗门交流将使您能够参加交易的加密的货币和贸易的任何当地的货币。 该令牌 GVC 还将可以交易的第三方 cryptocurrency 交流以及 Somolon 交换。"
              },
              "class:q-2" : {
-                 zh_CN : "如何 GEM 令牌创建的吗?"
+                 zh_CN : "如何 GVC 令牌创建的吗?"
              },
              "class:ans-2":{
-                 zh_CN : "的目的是所罗门群岛的交流令牌或 GEM 是作为货币的所罗门群岛的交流项目。 它们的保存价值和安全的支付工具的交易。 使用所罗门交流将使您能够参加交易的加密的货币和贸易的任何当地的货币。 该令牌 GEM 还将可以交易的第三方 cryptocurrency Somolon exchange.。"
+                 zh_CN : "的目的是所罗门群岛的交流令牌或 GVC 是作为货币的所罗门群岛的交流项目。 它们的保存价值和安全的支付工具的交易。 使用所罗门交流将使您能够参加交易的加密的货币和贸易的任何当地的货币。 该令牌 GVC 还将可以交易的第三方 cryptocurrency Somolon exchange.。"
              },
              "class:q-3" : {
-                 zh_CN : "我如何购买 GEM 令牌吗?"
+                 zh_CN : "我如何购买 GVC 令牌吗?"
              },
              "class:ans-3":{
-                 zh_CN : "说明参与 ICO 的 GEM 令牌将公布在我们的 ICO 网页开始 12:00 UTC 28 2017 8月。 每个投资者可以访问我们的 ICO 网页在那里出售的说明将被公布。 ICO 销售管理将由 Ethereum 的智能的合同。 只有在 ICO、GEM 令牌将在静态的价格为 1。 价格稍后将由市场的供求力量开始工作后的令牌都在流通。 所有购买 GEM 令牌将被立即从合同到您的电子钱包 Ethereum 后购买。"
+                 zh_CN : "说明参与 ICO 的 GVC 令牌将公布在我们的 ICO 网页开始 12:00 UTC 28 2017 8月。 每个投资者可以访问我们的 ICO 网页在那里出售的说明将被公布。 ICO 销售管理将由 Ethereum 的智能的合同。 只有在 GVC 令牌将在静态的价格为 1。 价格稍后将由市场的供求力量开始工作后的令牌都在流通。 所有购买 GVC 令牌将被立即从合同到您的电子钱包 Ethereum 后购买。"
              },
              "class:q-4" : {
                  zh_CN : "当我在哪里可以交易我的令牌?"
@@ -56,16 +56,16 @@
                  zh_CN : "令牌将能够提供贸易对我们的合作伙伴 cryptocurrency 交流。 令牌将开始出现在交流结束之后的 ICO 的周期。 请参阅我们的蓝图在我们的白皮书。"
              },
              "class:q-5" : {
-                 zh_CN : "什么 cryptocurrencies 我可以使用购买 GEM 令牌吗?"
+                 zh_CN : "什么 cryptocurrencies 我可以使用购买 GVC 令牌吗?"
              },
              "class:ans-5":{
-                 zh_CN : "目前, 投资者可以购买他们的令牌使用以太网(ETH)和 Bitcoin (BATTERY) (XBT9E1))。 在这种情况下, 您将需要提供的地址 Ethereum 钱包收到 GEM 的令牌。 您必须使用电子钱包, 支持紧急救济协调员 Ethereum20 合同。 请勿使用第三方的电子钱包 Ethereum 地址, 如第三方的交流, 收到您的令牌。"
+                 zh_CN : "目前, 投资者可以购买他们的令牌使用以太网(ETH)和 Bitcoin (BATTERY) (XBT9E1))。 在这种情况下, 您将需要提供的地址 Ethereum 钱包收到 GVC 的令牌。 您必须使用电子钱包, 支持紧急救济协调员 Ethereum20 合同。 请勿使用第三方的电子钱包 Ethereum 地址, 如第三方的交流, 收到您的令牌。"
              },
              "class:q-6" : {
-                 zh_CN : "我怎样才能保持最新的 GEM 新闻?"
+                 zh_CN : "我怎样才能保持最新的 GVC 新闻?"
              },
              "class:ans-6":{
-                 zh_CN : "投资者将会通知有关的所有活动和重要事件的有关项目 GEM 通过电子邮件发送新闻简报和信息发布在我们的社会媒体帐户"
+                 zh_CN : "投资者将会通知有关的所有活动和重要事件的有关项目 GVC 通过电子邮件发送新闻简报和信息发布在我们的社会媒体帐户"
              },
              "class:r1":{
                 zh_CN:"儀表板"
@@ -116,13 +116,13 @@
                 zh_CN:"BTC"
              },
              "class:bsmx":{
-                zh_CN:"购买 GEM"
+                zh_CN:"购买 GVC"
              },
              "class:pumo":{
                 zh_CN:"购买模式。"
              },
              "class:hms":{
-                zh_CN:"多少 GEM"
+                zh_CN:"多少 GVC"
              },
              "class:iat":{
                 zh_CN:"我接受"
@@ -167,22 +167,22 @@
                 zh_CN:"正在加载..."
              },
              "class:smxso":{
-                zh_CN:"GEM 顯示"
+                zh_CN:"GVC 顯示"
              },
              "class:amrai":{
                 zh_CN:"金额"
              },
              "class:smxho":{
-                zh_CN:"GEM 持有人"
+                zh_CN:"GVC 持有人"
              },
              "class:smxwu":{
-                zh_CN:"GEM 持有人"
+                zh_CN:"GVC 持有人"
              },
              "class:rates":{
                 zh_CN:"价格"
              },
              "class:smpri":{
-                zh_CN:"GEM 价格"
+                zh_CN:"GVC 价格"
              },
              "class:sinfm":{
                 zh_CN:"现在登录有更多的经验。"
@@ -323,7 +323,7 @@
                 zh_CN:"忘记密码？"
              },
              "class:bsmc":{
-                zh_CN:"购买 GEM 硬币"
+                zh_CN:"购买 GVC 硬币"
              },
              "class:payDe":{
                 zh_CN:"付款详情"
@@ -365,16 +365,16 @@
                 zh_CN:"第一天七天"
              },
              "class:f3dm1":{
-                zh_CN:"（2017年8月28日12:00 UTC -31八月2017 12:00 UTC）20％免费GEM"
+                zh_CN:"（2017年8月28日12:00 UTC -31八月2017 12:00 GVC"
              },
              "class:f3dm2":{
-                zh_CN:"（2017年8月31日12:01 UTC -7 九月 2017 12:00 UTC）15％免费GEM"
+                zh_CN:"（2017年8月31日12:01 UTC -7 九月 2017 12:00 GVC"
              },
              "class:f3dm3":{
-                zh_CN:"（2017年9月7日12:01 UTC -14 九月 2017 12:00 UTC）10％免费GEM"
+                zh_CN:"（2017年9月7日12:01 UTC -14 九月 2017 12:00 GVC"
              },
              "class:f3dm4":{
-                zh_CN:"（2017年9月14日12:01 UTC -21九月2017 12:00 UTC）5％免费GEM"
+                zh_CN:"（2017年9月14日12:01 UTC -21九月2017 12:00 GVC"
              },
              "class:bacWa":{
                 zh_CN:"钱包备份"
@@ -438,6 +438,9 @@
              },
              "class:forp_Res_ver_text":{
                  zh_CN:"输入您注册的邮箱，将向您重新发送激活链接"
+             },
+             "class:buy_mes_1": {
+               zh_CN:"你已经要求购买"
              }
          }
      });
