--- a/views/pages/send.ejs
+++ b/views/pages/send.ejs
@@ -72,7 +72,7 @@
                           <h2 class="text-danger text-center font-bold stcywt">Select The Currency You Want To Send</h2>
                           <div class="text-center" style="margin-top:20px;margin-bottom: 40px;">
                             <div class="radio radio-info radio-inline">
-                              <input type="radio" id="inlineRadio1" value="GEM" name="radioInline" checked="">
+                              <input type="radio" id="inlineRadio1" value="GVC" name="radioInline" checked="">
                               <label for="inlineRadio1" >GVC</label>
                             </div>
                             <div class="radio radio-success radio-inline">
